--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 NODE_ENVIROMMENT=development 
-PORT=3506
-MONGODB_URL= "mongodb://127.0.0.1:27017/nodePractice"
+PORT=22
+MONGODB_URL= "mongodb+srv://colorpridicationadmin:93UykPeMZHyFoZgT@colorpridication.2envbci.mongodb.net/?retryWrites=true&w=majority"
 
 
 JWT_SECRET=kasdashgdhjsagdhsagdhh        
