--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 NODE_ENVIROMMENT=development 
 PORT=3000
-MONGODB_URL= "mongodb+srv://colorpridicationadmin:93UykPeMZHyFoZgT@colorpridication.2envbci.mongodb.net/?retryWrites=true&w=majority"
+MONGODB_URL= "mongodb+srv://zetkhiladi:nSH2HdS3jeXiuedw@sara777.vde78tb.mongodb.net/?retryWrites=true&w=majority"
 
 
 JWT_SECRET=kasdashgdhjsagdhsagdhh        
